--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+
+    <!-- Powered by Ciro Matheus 
+      https://github.com/cwxx10
+      https://www.linkedin.com/in/ciro-matheus/
+    -->
   </body>
 </html>
